@@ -34,7 +34,7 @@ from bzrlib.plugins.qbzr.lib.statuscache import StatusCache
 from bzrlib.plugins.qbzr.lib.ui_bookmark import Ui_BookmarkDialog
 from bzrlib.plugins.qbzr.lib.util import (
     QBzrWindow,
-    QBzrConfig,
+    get_qbzr_config,
     open_browser,
     StandardButton,
     BTN_OK,
@@ -169,9 +169,9 @@ class BookmarksItem(SideBarItem):
         self.contextMenu.addAction(sidebar.window.actions['add-bookmark'])
 
     def load(self, sidebar):
-        config = QBzrConfig()
+        config = get_qbzr_config()
         self.children = []
-        for name, path in config.getBookmarks():
+        for name, path in config.get_bookmarks():
             item = BookmarkItem(name, path, self, sidebar)
             self.children.append(item)
 
@@ -368,29 +368,29 @@ class QBzrMainWindow(QBzrWindow):
 
         self.setCentralWidget(self.vsplitter)
 
-    def saveSize(self):
-        config = QBzrWindow.saveSize(self)
+    def _saveSize(self, config):
+        super(type(self),self)._saveSize(config)
         name = self._window_name
-        config.set_user_option(
+        config.set_option(
             name + "_vsplitter_state",
             str(self.vsplitter.saveState()).encode("base64").strip())
-        config.set_user_option(
+        config.set_option(
             name + "_hsplitter_state",
             str(self.hsplitter.saveState()).encode("base64").strip())
-        config.set_user_option(
+        config.set_option(
             name + "_file_list_header_state",
             str(self.fileListView.header().saveState()).encode("base64").strip())
 
     def restoreSize(self, name, defaultSize):
         config = QBzrWindow.restoreSize(self, name, defaultSize)
         name = self._window_name
-        value = config.get_user_option(name + "_vsplitter_state")
+        value = config.get_option(name + "_vsplitter_state")
         if value:
             self.vsplitter.restoreState(value.decode("base64"))
-        value = config.get_user_option(name + "_hsplitter_state")
+        value = config.get_option(name + "_hsplitter_state")
         if value:
             self.hsplitter.restoreState(value.decode("base64"))
-        value = config.get_user_option(name + "_file_list_header_state")
+        value = config.get_option(name + "_file_list_header_state")
         if value:
             self.fileListView.header().restoreState(value.decode("base64"))
 
@@ -472,19 +472,19 @@ class QBzrMainWindow(QBzrWindow):
         dialog = BookmarkDialog(gettext("Add Bookmark"), self)
         if dialog.exec_() == QtGui.QDialog.Accepted:
             name, location = dialog.values()
-            config = QBzrConfig()
-            config.addBookmark(name, location)
+            config = get_qbzr_config()
+            config.add_bookmark(name, location)
             config.save()
             self.sideBarModel.refresh(self.sideBarModel.bookmarksItem)
 
     def editBookmark(self, pos):
-        config = QBzrConfig()
+        config = get_qbzr_config()
         bookmarks = list(config.getBookmarks())
         dialog = BookmarkDialog(gettext("Edit Bookmark"), self)
         dialog.setValues(*bookmarks[pos])
         if dialog.exec_() == QtGui.QDialog.Accepted:
             bookmarks[pos] = dialog.values()
-            config.setBookmarks(bookmarks)
+            config.set_bookmarks(bookmarks)
             config.save()
             self.sideBarModel.refresh(self.sideBarModel.bookmarksItem)
 
@@ -494,10 +494,10 @@ class QBzrMainWindow(QBzrWindow):
             gettext("Do you really want to remove the selected bookmark?"),
             QtGui.QMessageBox.Yes | QtGui.QMessageBox.No)
         if res == QtGui.QMessageBox.Yes:
-            config = QBzrConfig()
+            config = get_qbzr_config()
             bookmarks = list(config.getBookmarks())
             del bookmarks[pos]
-            config.setBookmarks(bookmarks)
+            config.set_bookmarks(bookmarks)
             config.save()
             self.sideBarModel.refresh(self.sideBarModel.bookmarksItem)
 
