@@ -1,6 +1,7 @@
 0.20 Beta 1 - In development
 ----------------------------
 
+ * Clean up config code. (Gary van der Merwe)
 
 0.19.1 - In development
 -----------------------
